--- a/PhaseB/MovieOn/src/main/webapp/view/user-wishlist.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/user-wishlist.view.client.html
@@ -77,18 +77,18 @@
     <div ng-show="model.message" class="alert alert-success" role="alert">
         {{model.message}}
     </div>
-    <div class="media panel panel-primary" ng-if="movie.data.wishlist" ng-repeat="movie in model.movieList">
+    <div class="media panel panel-primary"  ng-repeat="movie in model.wishList">
         <div class="media-left media-middle">
-            <a ng-click="model.getMovieDetails(movie.data.id)">
-                <img class="media-object img-max" ng-src="{{movie.data.backdrop_path}}">
+            <a href="#!/movie/{{movie.movie.id}}">
+                <img class="media-object img-max" ng-src="{{movie.movie.backdrop_path}}">
             </a>
         </div>
         <div class="media-body">
             <a ng-click="model.getMovieDetails(movie.data.id)" class="text">
-                <h4 class="media-heading buy-button gap">{{movie.data.title}}</h4>
+                <h4 class="media-heading buy-button gap">{{movie.movie.original_title}}</h4>
             </a>
             <a class="imdb">
-                <i class="fa fa-star fa-2x golden buy-button" ng-click="model.unWishlistMovie(movie.data.id, $index)"></i>
+                <i class="fa fa-star fa-2x golden buy-button" ng-click="model.unWishlistMovie(movie.movie.id)"></i>
             </a>
         </div>
     </div>
@@ -96,13 +96,13 @@
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
-        <p class="copyright hidden-xs">© MANUJ BHARDWAJ 2017</p>
+        <p class="copyright hidden-xs">© Northeastern CCIS 2018</p>
         <div class="dropdown navbar-text pull-left" ng-if="model.user.type != 'Admin'">
             <a href="" class="navbar-link dropdown-toggle" type="button" data-toggle="dropdown">
                 <span class="glyphicon glyphicon-flag"></span>
             </a>
             <ul class="dropdown-menu">
-                <li><a ng-click="model.contactAdmin()">Contact Admin</a></li>
+                <li><a href="#!/contactAdmin">Contact Admin</a></li>
             </ul>
         </div>
         <div class="dropdown navbar-text pull-right">
